# kicad-tools

./: .env.example  .gitignore  .gitmodules  .loom-in-use  .loom-interrupted-context.json  .loom-managed  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  ISSUES-FOUND.md  LICENSE  Makefile  README.md  RELEASING.md  ROADMAP.md  WORK_LOG.md  WORK_PLAN.md  benchmark_astar_3309.py  package.json  pyproject.toml
.claude/: README.md  fresh-sweep-findings.md  settings.json
.claude/commands/: designer.md  export-manufacturing.md  release.md  repair-pcb.md  repair-schematic.md  review-pcb.md  review-schematic.md
.github/: CONFIGURATION.md  labels.yml  mypy-baseline.txt  routed-drc-tolerance.yml
.github/workflows/: benchmark-routing.yml  chorus-flag-matrix.yml  ci.yml  gallery-deploy.yml  label-external-issues.yml  nightly-ship-ready.yml  publish.yml  slow-tests.yml
.loom/: CLAUDE.md  doctor-fix-plan.md  install-metadata.json  loom-source-path  manifest.json  pr-body.md
.loom/roles/: designer.json  designer.md
.loom/scripts/: clean-agent-worktrees.sh  merge-pr.sh
benchmarks/hierarchical/: results.json  results.md  run_baseline_comparison.py  verdict.md
boards/: README.md
boards/00-simple-led/: generate_design.py  project.kct
boards/01-voltage-divider/: README.md  generate_design.py  project.kct
boards/02-charlieplex-led/: README.md  charlieplex_3x3.kicad_pcb  charlieplex_3x3.kicad_sch  charlieplex_3x3_routed.kicad_pcb  design_spec.py  generate_design.py  generate_pcb.py  generate_schematic.py  project.kct  route_demo.py
boards/03-usb-joystick/: README.md  generate_design.py  generate_pcb.py  generate_schematic.py  lcsc_models.json  project.kct  route_demo.py  usb_joystick.kicad_sch
boards/04-stm32-devboard/: README.md  design.py  generate_design.py  project.kct
boards/05-bldc-motor-controller/: README.md  design.py  project.kct
boards/06-diffpair-test/: README.md  generate_design.py  generate_design_diffpairs.py  generate_pcb.py  generate_schematic.py  lcsc_models.json  project.kct
boards/07-matchgroup-test/: README.md  ddr_bundle_isolation_repro.py  generate_design.py  generate_pcb.py  generate_schematic.py  project.kct
demo/: README.md  debug_usb_routing.py  test_placement_vs_routing.py  test_routing_strategies.py
demo/charlieplex_led_grid/: charlieplex_3x3_routed.kicad_pcb  route_demo.py  usb_joystick-drc.rpt
demo/usb_joystick/: generate_pcb.py  route_demo.py  usb_joystick.kicad_pcb  usb_joystick_routed-drc.rpt  usb_joystick_routed.kicad_pcb
docs/: PLACEMENT-OPTIMIZER-AGENT-PROMPT.md  README.md  architecture.md  board-fleet-parity-audit-2026-06.md  board-json-schema.md  getting-started.md  index.md  install-pilot-chorus.md  placement-scoring.md  research-atopile-build-system.md
docs/benchmarks/: placement_ga_routability_ab.md
docs/contributing/: development.md
docs/guides/: benchmarking.md  drc-and-validation.md  fom.md  lcsc-3d-models.md  manufacturing-export.md  placement-optimization.md  query-api.md  routing.md  schematic-analysis.md  schematic-to-pcb-workflow.md
docs/investigations/: 2026-06-board05-u10-17.md
docs/mcp/: README.md  configuration.md  setup.md  tools.md  troubleshooting.md  workflows.md
docs/reference/: api.md  circuit-blocks.md  cli.md  manufacturers.md
docs/research/: atopile-constraint-solving.md  atopile-error-handling.md  atopile-interface-patterns.md  atopile-layout-reuse.md  atopile-lsp-analysis.md  atopile-mcp-analysis.md  atopile-package-registry.md  atopile-research-synthesis.md  component-importer-for-kicad-evaluation.md  diode-pcb-comparison.md  faebryk-component-library.md  fom_calibration.md  learned_fom_phase0.md
docs/tutorials/: drc-manufacturer-rules.md
examples/: README.md
examples/00-voltage-divider-test/: generate_design.py
examples/01-schematic-analysis/: README.md  analyze.py
examples/02-bom-generation/: README.md  generate_bom.py  simple_rc.kicad_sch
examples/03-drc-checking/: README.md  check_drc.py
examples/04-autorouter/: README.md  debug_usb_routing.py  test_placement_vs_routing.py  test_routing_strategies.py
examples/05-end-to-end/: README.md  design.py  project.kct
examples/05-schematic-to-pcb-workflow/: README.md  workflow_example.py
examples/06-intelligent-placement/: README.md  agent_session_demo.py  clustering_demo.py  edge_placement_demo.py  thermal_demo.py
examples/07-design-feedback/: README.md  cost_demo.py  (+3 more)
notebooks/: fom_calibration.ipynb  fom_phase0.ipynb
scripts/: README.md  build-cpp.sh  calibrate_area_estimate.py  check_trace_vs_zone_fills.py  deploy-site.sh  diagnose_b03_diffpair.py  install-kct.sh  route_chorus.py
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
src/kicad_tools/router/cpp/: CMakeLists.txt
src/kicad_tools/router/cpp/include/: coupled_pathfinder.hpp  geometry.hpp  grid.hpp  pathfinder.hpp  types.hpp
src/kicad_tools/router/cpp/src/: bindings.cpp  coupled_pathfinder.cpp  geometry.cpp  grid.cpp  mesh.cpp  pathfinder.cpp
tests/: README.md  __init__.py  benchmark_results.json  conftest.py  test_acceleration_backend.py  test_adaptive_early_stop.py  test_adaptive_grid.py  test_alignment.py  test_alternatives.py  test_ampacity.py  test_ampacity_check.py  test_analog_detect.py  test_analog_nets.py  test_analysis_net_status.py  test_analysis_signal_integrity.py  test_apply_match_group_tuning.py  test_apply_match_group_tuning_connectivity.py  test_assembly_validation.py  test_audit.py  test_audit_hv_isolation.py  test_auto_layout.py  test_auto_mfr_tier_log_suppression.py  test_auto_pcb_size.py  test_auto_pcb_size_area_estimate.py  test_auto_pcb_size_doomed_fixture.py  test_auto_pcb_size_drc_proxy.py  test_auto_pcb_size_integration.py  test_auto_pcb_size_softstart_smoke.py  test_auto_pour.py  test_batch_routing.py  test_benchmark_chorus.py  test_benchmarks.py  test_best_metric_patience.py  test_best_state_tracking.py  test_bidirectional_astar.py  test_block_router.py  test_blocks_analog_joystick.py  test_blocks_back_to_back_fet_pair.py  test_blocks_bootstrap_cap_array.py  test_blocks_buck_converter.py  (+767 more)
(+1265 files in other folders)
