[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicad-tools"
version = "0.2.0"
description = "Standalone Python tools for parsing and manipulating KiCad schematic and PCB files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "RJ Walters" }
]
keywords = [
    "kicad",
    "eda",
    "pcb",
    "schematic",
    "electronics",
    "hardware",
    "automation",
    "drc",
    "erc",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/rjwalters/kicad-tools"
Repository = "https://github.com/rjwalters/kicad-tools"
Issues = "https://github.com/rjwalters/kicad-tools/issues"

[project.scripts]
# Unified CLI
kicad-tools = "kicad_tools.cli:main"
kct = "kicad_tools.cli:main"

# Standalone shortcuts
kicad-symbols = "kicad_tools.cli:symbols_main"
kicad-nets = "kicad_tools.cli:nets_main"
kicad-erc = "kicad_tools.cli:erc_main"
kicad-drc = "kicad_tools.cli:drc_main"
kicad-bom = "kicad_tools.cli:bom_main"

# PCB tools (not yet in unified CLI)
kicad-pcb-query = "kicad_tools.cli.pcb_query:main"
kicad-pcb-modify = "kicad_tools.cli.pcb_modify:main"

# Library tools (not yet in unified CLI)
kicad-lib-symbols = "kicad_tools.cli.lib_list_symbols:main"

[project.optional-dependencies]
# LCSC parts API access
parts = [
    "requests>=2.28",
]
# All optional features
all = [
    "requests>=2.28",
]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "responses>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kicad_tools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # line too long - handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=kicad_tools --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/kicad_tools"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 2
