[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kicad-tools"
version = "0.7.2"
description = "Standalone Python tools for parsing and manipulating KiCad schematic and PCB files"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "RJ Walters" }
]
keywords = [
    "kicad",
    "eda",
    "pcb",
    "schematic",
    "electronics",
    "hardware",
    "automation",
    "drc",
    "erc",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/rjwalters/kicad-tools"
Repository = "https://github.com/rjwalters/kicad-tools"
Issues = "https://github.com/rjwalters/kicad-tools/issues"

[project.scripts]
# Unified CLI
kicad-tools = "kicad_tools.cli:main"
kct = "kicad_tools.cli:main"

# Standalone shortcuts
kicad-symbols = "kicad_tools.cli:symbols_main"
kicad-nets = "kicad_tools.cli:nets_main"
kicad-erc = "kicad_tools.cli:erc_main"
kicad-drc = "kicad_tools.cli:drc_main"
kicad-drc-summary = "kicad_tools.cli:drc_summary_main"
kicad-bom = "kicad_tools.cli:bom_main"

# PCB tools (not yet in unified CLI)
kicad-pcb-query = "kicad_tools.cli.pcb_query:main"
kicad-pcb-modify = "kicad_tools.cli.pcb_modify:main"
kicad-pcb-stitch = "kicad_tools.cli.stitch_cmd:main"

# Library tools (not yet in unified CLI)
kicad-lib-symbols = "kicad_tools.cli.lib_list_symbols:main"

# Hierarchy validation
kicad-sch-hierarchy = "kicad_tools.cli.sch_hierarchy:main"

# Net status reporting
kicad-net-status = "kicad_tools.cli:net_status_main"

# Manufacturer design rules
kicad-fab-rules = "kicad_tools.cli.fab_rules_cmd:main"

# Project tools
kicad-project-clean = "kicad_tools.cli.clean_cmd:main"

[project.optional-dependencies]
# LCSC parts API access
parts = [
    "requests>=2.28",
]
# Datasheet PDF processing
datasheet = [
    "markitdown>=0.1.0",
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
]
# YAML constraint manifest support
constraints = [
    "pyyaml>=6.0",
]
# All optional features
all = [
    "requests>=2.28",
    "markitdown>=0.1.0",
    "pdfplumber>=0.10.0",
    "PyMuPDF>=1.23.0",
    "pyyaml>=6.0",
]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "requests>=2.28",
    "responses>=0.23.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kicad_tools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long - handled by formatter
    "SIM108", # ternary operator - sometimes less readable
    "SIM102", # nested if - sometimes more readable
    "SIM103", # return negated - sometimes less readable
    "SIM117", # combine with - sometimes less readable
    "SIM118", # key in dict.keys() - sometimes explicit is clearer
    "E402",   # module level import not at top - common in tests
    "E741",   # ambiguous variable name - sometimes 'l' is fine for layer/line
    "B904",   # raise from - requires careful refactoring
    "B007",   # unused loop variable - use _ prefix instead
    "B023",   # function doesn't bind loop variable - requires refactoring
    "UP035",  # deprecated typing imports - requires Python 3.9+ for generics
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["kicad_tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=kicad_tools --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["src/kicad_tools"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
precision = 2
